# corner-the-flags

./: README.md  pyproject.toml
purescript-client/: spago.yaml
purescript-client/src/: Main.purs
purescript-client/web/: index.html  style.css
python_client/: pyproject.toml
python_client/src/: controller.py  main.py  model.py  project_types.py  view.py
